--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,12 @@
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
+
   }
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #30475e;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -25,8 +26,11 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #f05454;
+  padding: 20px;
   text-decoration: none !important;
+  font-size: 40px;
+  font-family: "Open-sans", sans-serif;
 }
 
 @keyframes App-logo-spin {
